Fix overall layout

--- a/css/main.css
+++ b/css/main.css
@@ -6,28 +6,109 @@
 	margin: auto;
 }
 
-img, embed, object, video {
+img, 
+embed, 
+object, 
+video {
 	max-width: 100%;
 }
 
 body {
-	display: block;
-	padding-left: 50px;
-	padding-right: 50px;
+	padding: 0 50px;
 }
 
-h1, h2, h3 {
+h1, 
+h2, 
+h3 {
 	line-height: 1.45;
 }
 
 .logo {
 	padding-top: 5%;
-	height: 85px;
-	width: 95px;
+	height: auto;
+	width: auto;
 }
 
-.container-inline {
-	display: inline;
+.box {
+	width: 100%;
+}
+
+.wrapper {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.top-fixed {
+	display: flex;
+	position: fixed;
+	top: 0;
+	left: 0;
+}
+
+.header-container {
+	display: flex;
+	order: 1;
+	padding: 10px 50px;
+}
+
+.border-bottom { 
+	border-bottom: 2px solid gray;
+}
+
+.border-top { 
+	border-top: 2px solid gray;
+}
+
+.top-image-container {	
+	width: 100%;
+	order: 2;
+}
+
+.project-container {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	order: 3;
+	padding: 20px 0;
+}
+
+.section-title {
+	padding: 10px 0;
+}
+
+.section-description {
+	padding: 10px 0;
+}
+
+.project-list-container {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	width: 100%;
+	order: 4;
+	padding: 10px 0;
+}
+
+.footer-container {
+	width: 100%;
+	order: 5;
+}
+
+.footer-item {
+	padding: 10px 0;
+	text-align: center;
+}
+
+.logo-item {
+	align-self: flex-start;
+	width: 20%;
+	height: auto;
+}
+
+.title-item {
+	align-self: flex-end;
+	text-align: right;
+	width: 80%
 }
 
 .name {
@@ -40,63 +121,51 @@ h1, h2, h3 {
 }
 
 .top-image {
-	display: block;
 	width: auto;
 	height: auto;
-	padding-top: 150px;
+	padding-top: 120px;
 	padding-bottom: 20px;
-}
-
-.top {
-	position: fixed;
-	width: 100%;
-	top: 0;
-	left: 0;
-	padding: 20px 50px;
-}
-
-.horizontal-line {
-  	border: 1px solid gray;
 }
 
 .gray-text {
 	color: gray;
 }
 
-.left {
-	float: left;
-}
-
-.projects-container {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content:space-between;
-}
-
 .project-img {
-	height: 250px;
-	width: 300px;
+	width: auto;
+	height: auto;
 }
 
-.description {
+.project-details {
 	padding-top: 20px;
 	text-align: center;
 	line-height: 1.0;
-	display: inline-block;
 	width: 300px;
-	height: 500px;
+	height: 400px;
 }
 
 @media only screen and (max-width: 478px) {
-	.name {
+	h1 {
 		font-size: 18px;
 	}
-	.top {
-		padding: 20px 25px;
+	
+	h2 {
+		font-size: 16px;
+	}
+
+	h3 {
+		font-size: 14px;
+	}
+
+	p, a {
+		font-size: 14px;
+	}
+
+	.header-container {
+		padding: 5px 25px;
 	}
 
 	body {
-		padding-left: 25px;
-		padding-right: 25px;
+		padding: 0 25px;
 	}
 }
